fix: changed nowrap on wrap for adaptive design navigation

--- a/shelter/assets/sass/layout/_navigation.scss
+++ b/shelter/assets/sass/layout/_navigation.scss
@@ -1,5 +1,5 @@
 .navigation_list {
-  @include flex($justify: flex-end);
+  @include flex($justify: flex-end, $wrap: wrap);
   list-style: none;
 }
 
